# shammah

./: .gitignore  AGENT_SERVER_PLAN.md  CHANGELOG.md  CLAUDE.md  CONSTITUTIONAL_PROXY_SPEC.md  COREML_MULTIBACKEND_ROADMAP.md  Cargo.toml  DAEMON_SIDE_CLEANING_COMPLETE.md  DEPLOYMENT_VERIFICATION.md  FINAL_TEST_SUMMARY.md  FIX_PLAN_MODE_EXIT.md  INIT.md  LICENSE  MODEL_COMPATIBILITY_AUDIT.md  MODEL_COMPATIBILITY_FIXES.md  OLD_VS_NEW_COMPARISON.md  OUTPUT_REGRESSION_FIX.md  PHASE1_AGENT_SERVER_COMPLETE.md  PHASE1_COMPLETE.md  PHASE_3_BOOTSTRAP_COMPLETE.md  PIPED_INPUT_TESTS.md  PROJECT_STATUS.md  README.md  STATUS.md  STREAMING_TEST_RESULTS.md  TERMINAL_UI_STATUS.md  TRAINING_EFFECTIVENESS.md  test_persistence.sh  test_server.sh
.github/workflows/: ci.yml  release.yml
docs/: ANNOUNCEMENTS.md  ARCHITECTURE.md  AUTOMATIC_TRAINING.md  CONFIGURATION.md  DAEMON_MODE.md  DEVELOPMENT.md  FIX_GEMINI_MODEL.md  MCP_ARCHITECTURE.md  MCP_USER_GUIDE.md  MULTI_PROVIDER_CONFIG.md  MULTI_PROVIDER_IMPLEMENTATION.md  PHASE_2_FEATURES_COMPLETE.md  PHASE_4_MCP_PROGRESS.md  PHASE_7_LORA_TRAINING.md  PHASE_8_DAEMON_ONLY_CLI.md  PLAN_MODE_REDESIGN.md  ROADMAP.md  TOOL_CONFIRMATION.md  TOOL_PASS_THROUGH_COMPLETE.md  TOOL_PASS_THROUGH_IMPLEMENTATION.md  TRAINING_FRAMEWORK.md  TUI_ARCHITECTURE.md  USER_GUIDE.md
docs/archive/: ASKUSERQUESTION_INTEGRATION.md  FIX_CUSTOM_TEXT_INPUT.md  FIX_DIALOG_AND_PLAN_MODE_UI.md  FIX_SCROLLBACK_AND_DIALOGS.md  FIX_TOOL_PATTERNS_BUG.md  LOCAL_COMMAND_IMPLEMENTATION.md  ONNX_MIGRATION_STATUS.md  PHASE_4_COMPILATION_STATUS.md  PHASE_4_MCP_STEPS_1-3_COMPLETE.md  PHASE_5_KV_CACHE_COMPLETE.md  PHASE_5_ONNX_INFERENCE_PLAN.md  PHASE_6_LOCAL_TOOL_USE.md  PHASE_8_DAEMON_ARCHITECTURE_PROGRESS.md  README.md  STATUS_AUDIT.md
examples/: comprehensive_test.rs  phase2_training.rs  phase2_tui_demo.rs  progressive_bootstrap_demo.rs  readline_demo.rs  regex_patterns_demo.rs  simple_query.rs  tool_confirmation_demo.rs  tracing_demo.rs
scripts/: requirements.txt  test_tool_passthrough.sh  train_lora.py
src/: errors.rs  lib.rs  main.rs
src/claude/: client.rs  mod.rs  streaming.rs
src/cli/: commands.rs  conversation.rs  global_output.rs  input.rs  menu.rs  mod.rs  output_layer.rs  output_manager.rs  repl.rs  setup_wizard.rs  simple_repl.rs  status_bar.rs
src/cli/messages/: concrete.rs  mod.rs
src/cli/repl_event/: event_loop.rs  tool_execution.rs
src/cli/tui/: async_input.rs  dialog.rs  dialog_widget.rs  input_handler.rs  input_widget.rs  mod.rs  output_widget.rs  scrollback.rs  shadow_buffer.rs  status_widget.rs
src/client/: daemon_client.rs  mod.rs
src/config/: backend.rs  colors.rs  loader.rs  mod.rs  settings.rs
src/crisis/: detector.rs
src/daemon/: lifecycle.rs  mod.rs  spawn.rs
src/feedback/: mod.rs
src/generators/: qwen.rs
src/local/: generator.rs  mod.rs
src/metrics/: mod.rs  similarity.rs  trends.rs  types.rs
src/models/: bootstrap.rs  common.rs  download.rs  ensemble.rs  generator.rs  generator_new.rs  lora.rs  mod.rs  persistence.rs  qwen_loader.rs  router.rs  threshold_router.rs  threshold_validator.rs  tokenizer.rs  tool_parser.rs  tool_prompt.rs  unified_loader.rs  validator.rs
src/models/adapters/: deepseek.rs  mod.rs  phi.rs  qwen.rs
src/models/loaders/: coreml.rs  gemma.rs  llama.rs  mistral.rs  mod.rs  onnx.rs  onnx_config.rs  qwen.rs
src/providers/: claude.rs  factory.rs  fallback_chain.rs  mod.rs  openai.rs  types.rs
src/router/: decision.rs  hybrid_router.rs  mod.rs  model_router.rs
src/server/: feedback_handler.rs  handlers.rs  middleware.rs  mod.rs  openai_handlers.rs  openai_types.rs  session.rs  training_worker.rs
src/tools/: executor.rs  mod.rs  patterns.rs  registry.rs  types.rs
src/tools/implementations/: analyze_model.rs  ask_user_question.rs  bash.rs  compare_responses.rs  enter_plan_mode.rs  generate_training.rs  glob.rs  grep.rs  mod.rs  present_plan.rs  query_local.rs  read.rs  save_and_exec.rs  web_fetch.rs
src/tools/mcp/: client.rs  config.rs  connection.rs
src/training/: batch_trainer.rs  checkpoint.rs  lora_subprocess.rs  mod.rs
tests/: README.md  adapter_streaming_test.rs  daemon_integration_test.rs  fallback_chain_test.rs  lora_training_test.rs  mcp_integration_test.rs  provider_config_test.rs  router_persistence_test.rs  server_test.rs  simple_forward_test.rs  tool_integration_test.rs  training_test.rs  tui_integration_test.rs
